--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,92 @@
   padding: 0;
 }
 
+.logo img {
+  width: 8rem;
+  height: 7rem;
+}
+
+body {
+  width: 100vw;
+  background-color: #07192f;
+}
+
 .typewriter {
   color: white;
   display: flex;
+  flex-direction: column;
   height: 100%;
   width: 100%;
   align-items: center;
   justify-content: center;
 }
 
+.nav-scroll {
+  width: 100%;
+  background-color: #07192f;
+  z-index: 2 !important;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed !important;
+  padding: 1rem;
+}
+
+.nav {
+  z-index: 2 !important;
+  background-color: transparent;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed !important;
+  width: 100%;
+  padding: 1rem;
+}
+
+.navList {
+  display: flex;
+  font-size: larger;
+  list-style: none;
+  justify-content: space-between;
+}
+
+.aboutContainer, .projectContainer, .contactContainer {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding: 2rem;
+  padding-top: 10rem;
+  height: 800px;
+  max-width: 100vw;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: 900;
+  color: white;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+}
+
+.introduction { 
+  text-align: left !important;
+}
+ li {
+  cursor: pointer;
+  margin: 1rem;
+  padding-bottom: .5rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: white;
+}
+
+li:hover {
+  border-bottom: 2px solid lightblue;
+}
+
 h1 {
+  color: white;
   font-size: 3rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 900;
 }
 
@@ -23,31 +98,56 @@ h1 {
   width: 100vw;
 }
 
-.typewriter::after {
-  content: '';
-  position: absolute;
-  right: 0;
-  border-left: 4px solid white;
-  background-color: #07192F;
-  width: 58%;
-  height: 4rem;
-  animation: typing 3s steps(14) alternate infinite,
-             line 1s infinite;
+.material-symbols-outlined {
+  display: none;
+  color: white;
+  font-size: 3rem;
 }
 
-.changeTxt {
-  margin-left: .5em;
+.vanta-canvas {
+  width: 100%;
 }
 
-
-@keyframes typing {
-  to{
-    width: 30%;
+@media (max-width: 768px) {
+  .navList li {
+    display: none;
   }
-}
 
-@keyframes line {
-  50%{
-    color: transparent;
+  .material-symbols-outlined {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    text-align: right;
+    padding-right: 1rem;
+    display: inline-block;
+  }
+
+  .x {
+    grid-column: 2 / -1;
+    text-align: right;
+    padding-right: 1rem;
+    grid-row: 1 / 2;
+    font-size: 3rem;
+    color: white;
+  }
+
+  .nav, .nav-scroll {
+    display: grid;
+    width: 100vw;
+    padding: 0;
+    margin: 0;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .brgrNav {
+    display: flex;
+    align-items: center;
+    background-color: #07192f;
+    grid-column: 1 / -1;
+    list-style: none;
+    flex-direction: column;
+  }
+
+  .typewriter {
+    padding-left: 1rem;
   }
 }
