--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,12 @@
   padding: 0;
 }
 
-.logo img {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.logo {
+  border-radius: 10rem;
   width: 8rem;
   height: 7rem;
 }
@@ -52,14 +57,17 @@ body {
   justify-content: space-between;
 }
 
-.aboutContainer, .projectContainer, .contactContainer {
+.aboutContainer {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   padding: 2rem;
   padding-top: 10rem;
-  height: 800px;
-  max-width: 100vw;
+  
+}
+
+.pjContain {
+  padding-top: 10rem;
 }
 
 h2 {
@@ -98,6 +106,10 @@ h1 {
   width: 100vw;
 }
 
+.brgrNav, .x {
+  display: none;
+}
+
 .material-symbols-outlined {
   display: none;
   color: white;
@@ -108,6 +120,25 @@ h1 {
   width: 100%;
 }
 
+img {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+a:hover {
+  
+  background-color: rgba(141, 137, 137, 0.5);
+  border-radius: 4rem;
+}
+
+a {
+  padding: .35rem;
+}
+a:link, a:visited {
+  
+  text-decoration: none;
+  color: white;
+}
 @media (max-width: 768px) {
   .navList li {
     display: none;
@@ -122,6 +153,7 @@ h1 {
   }
 
   .x {
+    display: block;
     grid-column: 2 / -1;
     text-align: right;
     padding-right: 1rem;
@@ -137,7 +169,7 @@ h1 {
     margin: 0;
     grid-template-columns: 1fr 1fr;
   }
-
+  
   .brgrNav {
     display: flex;
     align-items: center;
