--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,11 @@ img {
   height: 1.5rem;
 }
 
+.contactContainer {
+  display: flex;
+  height: 900px;
+}
+
 a:hover {
   
   background-color: rgba(141, 137, 137, 0.5);
@@ -139,6 +144,7 @@ a:link, a:visited {
   text-decoration: none;
   color: white;
 }
+
 @media (max-width: 768px) {
   .navList li {
     display: none;
