--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  
 }
 
 @tailwind base;
@@ -10,11 +11,15 @@
 .logo {
   border-radius: 10rem;
   width: 8rem;
-  height: 7rem;
+  height: 5.5rem;
 }
 
 body {
-  width: 100vw;
+  width: 100vw !important;
+  background-color: #07192f;
+}
+
+.backup {
   background-color: #07192f;
 }
 
@@ -31,6 +36,8 @@ body {
 .nav-scroll {
   width: 100%;
   background-color: #07192f;
+  max-height: 5.5rem;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
   z-index: 2 !important;
   display: flex;
   justify-content: space-around;
@@ -41,6 +48,7 @@ body {
 
 .nav {
   z-index: 2 !important;
+  max-height: 5.5rem;
   background-color: transparent;
   display: flex;
   justify-content: space-around;
@@ -63,11 +71,12 @@ body {
   flex-direction: column;
   padding: 2rem;
   padding-top: 10rem;
-  
+  width: 100vw;
 }
 
 .pjContain {
   padding-top: 10rem;
+  width: 100vw;
 }
 
 h2 {
@@ -81,16 +90,31 @@ h2 {
 .introduction { 
   text-align: left !important;
 }
- li {
+
+li {
   cursor: pointer;
+  display: inline-block;
+  position: relative;
   margin: 1rem;
   padding-bottom: .5rem;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: white;
 }
 
-li:hover {
-  border-bottom: 2px solid lightblue;
+.link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 2px;
+  background-color: lightblue;
+  transition: width 0.3s;
+}
+
+.link:hover::after {
+  width: 100%;
+  transition: width 0.3s;
 }
 
 h1 {
@@ -100,10 +124,15 @@ h1 {
   font-weight: 900;
 }
 
+.App {
+   width: 100vw !important;
+}
+
 #main {
   position: relative;
   height: 100vh;
-  width: 100vw;
+  width: 100vw !important;
+  
 }
 
 .brgrNav, .x {
@@ -117,7 +146,7 @@ h1 {
 }
 
 .vanta-canvas {
-  width: 100%;
+  width: 100vw !important;
 }
 
 img {
@@ -125,9 +154,16 @@ img {
   height: 1.5rem;
 }
 
-.contactContainer {
-  display: flex;
-  height: 900px;
+#arrow {
+  
+  display: inline-block;
+}
+
+.scroll-to-top {
+  background-color: rgb(7, 35, 129) !important;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
 
 a:hover {
@@ -145,9 +181,23 @@ a:link, a:visited {
   color: white;
 }
 
+@media (min-height: 810px) {
+  .projectContainer {
+    margin-bottom: 5rem;
+  }
+}
+
 @media (max-width: 768px) {
   .navList li {
     display: none;
+  }
+
+  .vanta-canvas {
+    display: none !important;
+  }
+
+  #arrow {
+    padding-right: 0;
   }
 
   .material-symbols-outlined {
@@ -170,6 +220,7 @@ a:link, a:visited {
 
   .nav, .nav-scroll {
     display: grid;
+    max-height: 5.5rem;
     width: 100vw;
     padding: 0;
     margin: 0;
@@ -183,6 +234,7 @@ a:link, a:visited {
     grid-column: 1 / -1;
     list-style: none;
     flex-direction: column;
+    transition: all 3.5s ease-in-out;
   }
 
   .typewriter {
